--- a/views/services.html
+++ b/views/services.html
@@ -1,53 +1,17 @@
-<div class="main" data-ng-controller="servicesController">
-    <div ng-hide>
-        <input id='podvar' type="hidden" ng-model="services"/>
-    </div>
-    <section class="product-item">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="section-title">
-                        <h2 class="h2-title">My Services <a class='btn btn-info' ng-click="getPod()"> Load Now</a></h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div ng-repeat="p in services">
-                    <div>
-                        <div class="widget">
-                            <div class="widget-title">
-                                <h3>{{p.metadata.name}} <a class='btn btn-info' ng-click="showContainers()">
-                                    Show </a>
-                                </h3>
-                            </div>
-                            <div class="widget-content">
-
-                                <p class="desc_title"><b>Description</b> : {{p.metadata.selfLink}}
-                                </p>
-
-                                <p class="desc_title"><b>created</b> : {{p.metadata.creationTimestamp}}
-                                </p>
-
-                                <p class="desc_title"><b>Uuid</b> : {{p.metadata.uid}}
-                                </p>
-
-                                <p class="desc_title"><b>Status</b> : <span class=""> {{p.status.phase}} </span></p>
-                            </div>
-                            <div class="widget-action text-right"><a ng-click="start(container)" class=""
-                                                                     title="start"> <i
-                                    class="fa fa-play"></i></a> <a ng-click="stop(container)" class=""
-                                                                   title="stop"> <i class="fa fa-stop"></i></a>
-                                <a ng-click="delete(container)" class="" title="delete"> <i
-                                        class="fa fa-trash"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-    </section>
-
-</div>
-
+<button ng-click='getServices()'>Load Services</button>
+<table class="table table-condensed">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>UID</th>
+            <th>SelfLink</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="s in services">
+            <td>{{s.metadata.name}}</td>
+            <td>{{s.metadata.uid}}</td>
+            <td>{{s.metadata.selfLink}}</td>
+        </tr>
+    </tbody>
+</table>
