--- a/views/rc.html
+++ b/views/rc.html
@@ -1,18 +1,25 @@
-<button ng-click='getRC()'>Load RC</button>
-<table class="table table-condensed">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>UID</th>
-            <th>SelfLink</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="r in rc">
-            <td>{{r.metadata.name}}</td>
-            <td>{{r.metadata.uid}}</td>
-            <td>{{r.metadata.selfLink}}</td>
-        </tr>
-    </tbody>
-</table>
-</div>
+<section>
+        <div class="row">
+                <div class="col-sm-3"><b>Name</b></div>
+                <div class="col-sm-3"><b>Namespace</b></div>
+                <div class="col-sm-3"><b>Replicas</b></div>
+                <div class="col-sm-3"><b>Actions</b></div>
+        </div>
+        <div class="row">
+                <div ng-repeat="r in rc">
+                        <div ng-class="{gray: hover}" ng-mouseenter="hover=true" ng-mouseleave="hover=false" ng-click="showrc=!showrc" class="row">
+                                <div class="col-sm-3" ng-show=true>{{r.metadata.name}}</div>
+                                <div class="col-sm-3" ng-show=true>{{r.metadata.namespace}}</div>
+                                <div class="col-sm-3" ng-show=true>{{r.spec.replicas}}</a></div>
+                                <div class="col-sm-3" ng-show=true>
+                                        <a ng-click="start(r.metadata.name);showrc=!showrc" class="" title="start"> <i class="fa fa-play"></i></a>
+                                        <a ng-click="stop(r.metadata.name);showrc=!showrc" class="" title="stop"> <i class="fa fa-stop"></i></a>
+                                        <a ng-click="delete(r.metadata.name);showrc=!showrc" class="" title="delete"> <i class="fa fa-trash"></i></a>
+                                </div>
+                                <div class="col-sm-12" ng-show="showrc">
+                                        <pre>{{r | json}}</pre>
+                                </div>
+                        </div>
+                </div>
+        </div>
+</section>
