--- a/views/header.html
+++ b/views/header.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li data-ng-class="{active:isActive('/')}">
-                    <a href="#">My Kubernetes</a>
+                    <a href="#/">My Kubernetes</a>
                 </li>
                 <li data-ng-class="{active:isActive('/pods')}" >
                     <a href="#/pods">My Pods</a>
