--- a/views/services.html
+++ b/views/services.html
@@ -1,17 +1,25 @@
-<button ng-click='getServices()'>Load Services</button>
-<table class="table table-condensed">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>UID</th>
-            <th>SelfLink</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="s in services">
-            <td>{{s.metadata.name}}</td>
-            <td>{{s.metadata.uid}}</td>
-            <td>{{s.metadata.selfLink}}</td>
-        </tr>
-    </tbody>
-</table>
+<section>
+        <div class="row">
+                <div class="col-sm-3"><b>Name</b></div>
+                <div class="col-sm-3"><b>Namespace</b></div>
+                <div class="col-sm-3"><b>ClusterIP</b></div>
+                <div class="col-sm-3"><b>Actions</b></div>
+        </div>
+        <div class="row">
+			<div ng-repeat="s in services">
+	                <div ng-class="{gray: hover}" ng-mouseenter="hover=true" ng-mouseleave="hover=false" ng-click="showservices=!showservices" class="row">
+                        	<div class="col-sm-3" ng-show=true>{{s.metadata.name}}</div>
+                        	<div class="col-sm-3" ng-show=true>{{s.metadata.namespace}}</div>
+                        	<div class="col-sm-3" ng-show=true>{{s.spec.clusterIP}}</div>
+							<div class="col-sm-3" ng-show=true>
+								<a ng-click="start(s.metadata.name);showservices=!showservices" class="" title="start"> <i class="fa fa-play"></i></a>
+								<a ng-click="stop(s.metadata.name);showservices=!showservices" class="" title="stop"> <i class="fa fa-stop"></i></a>
+                    			<a ng-click="delete(s.metadata.name);showservices=!showservices" class="" title="delete"> <i class="fa fa-trash"></i></a>
+                    		</div>
+                            <div class="col-sm-12" ng-show="showservices">
+                            	<pre>{{s | json}}</pre>
+                            </div>
+                    </div>
+        	</div>
+		</div>
+</section>
