Add bit more support for multiple contexts

--- a/views/header.html
+++ b/views/header.html
@@ -7,24 +7,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">How2kube UI</a>
+            <a class="navbar-brand" href="#">Kui</a>
         </div>
         <!--/.navbar-collapse -->
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li data-ng-class="{active:isActive('/')}">
-                    <a href="#/">My Kubernetes</a>
+                    <a href="#/">Home</a>
                 </li>
                 <li data-ng-class="{active:isActive('/pods')}" >
-                    <a href="#/pods">My Pods</a>
+                    <a href="#/pods">Pods</a>
                 </li>
                 <li data-ng-class="{active:isActive('/services')}" >
-                    <a href="#/services">My Services</a>
+                    <a href="#/services">Services</a>
                 </li>
                 <li data-ng-class="{active:isActive('/rc')}" >
-                    <a href="#/rc">My Replication Controllers</a>
+                    <a href="#/rc">Replication Controllers</a>
                 </li>
-
+                <li data-ng-class="{active:isActive('/rc')}" >
+                    <a href="#/context">Contexts</a>
+                </li>
             </ul>
         </div>
     </div>
