--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,18 @@
+<!--
+   Copyright 2015 Skippbox, Ltd
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+-->
 <h2>My Kubernetes</h2>
 <h3>Just a place holder, we might search for tags here</h3>
 <input type="text" placeholder="Search Tags" class="form-control" data-ng-model="search">
