--- a/views/header.html
+++ b/views/header.html
@@ -42,6 +42,9 @@
                 <li data-ng-class="{active:isActive('/rc')}" >
                     <a href="#/context">Contexts</a>
                 </li>
+                <li data-ng-class="{active:isActive('/rc')}" >
+                    <a href="#/store">Store</a>
+                </li>
             </ul>
         </div>
     </div>
