Refactor/Optimize code flow. k8s/ includes resource controller and view.

--- a/views/header.html
+++ b/views/header.html
@@ -42,6 +42,9 @@
                 <li data-ng-class="{active:isActive('/rc')}" >
                     <a href="#/context">Contexts</a>
                 </li>
+                <li data-ng-class="{active:isActive('/rc')}" >
+                    <a ng-click="refresh()"><i class="fa fa-refresh"></i> </a>
+                </li>
             </ul>
         </div>
     </div>
