--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -53,7 +53,9 @@
 
                     <form ng-show="editing" ng-submit="editing = false;updateLabel(labelStr, p.pod.metadata.name);">
                         <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"  ng-required></textarea>
-                        <button class="btn" type="submit">Save</button>
+                        <br/>
+                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                        <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
                     </form>
                 </div>
             </div>
