--- a/views/k8s/rc.html
+++ b/views/k8s/rc.html
@@ -54,8 +54,9 @@
 
                     <form ng-show="editingLabel" ng-submit="editingLabel = false;updateLabel(labelStr, r.metadata.name);">
                         <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"  ng-required></textarea>
-                        <button class="btn" type="submit">Save</button>
-                    </form>
+                        <br/>
+                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                        <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>                    </form>
                 </div>
             </div>
         </div>
