--- a/views/k8s/services.html
+++ b/views/k8s/services.html
@@ -42,8 +42,9 @@
 
                         <form ng-show="editingLabel" ng-submit="editingLabel = false;updateLabel(labelStr, s.metadata.name);">
                             <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"  ng-required></textarea>
-                            <button class="btn" type="submit">Save</button>
-                        </form>
+                            <br/>
+                            <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                            <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>     </form>
                     </div>
                 </div>
         	</div>
