--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -14,11 +14,16 @@
    limitations under the License.
 -->
 <section>
-    <div class="row">
-        <div class="col-sm-3"><b>Name</b></div>
-        <div class="col-sm-3"><b>Namespace</b></div>
-        <div class="col-sm-3"><b>Status</b></div>
-        <div class="col-sm-3"><b>Actions</b></div>
+    <div class="row" style="text-align: right" ng-click="alert('Create Pod')">
+        <i class="btn btn-success fa fa-plus"> New </i>
+    </div>
+    <hr/>
+
+    <div class="table table-responsive">
+        <thead><b>Name</b></thead>
+        <thead><b>Namespace</b></div>
+        <thead><b>Status</b></div>
+        <thead><b>Actions</b></div>
     </div>
     <div class="row" ng-if="podsReady">
         <div ng-repeat="p in pods">
@@ -38,7 +43,7 @@
                             class="fa fa-trash"></i></a></div>
 
                 <div class="col-sm-12" ng-show="showpod">
-                    <pre>{{p | json}}</pre>
+                    <pre>{{p.pod | json}}</pre>
                 </div>
                 <div ng-show="pod_{{p.id}} && pStr">
                     <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid"></textarea>
@@ -52,7 +57,8 @@
                     <span ng-hide="editing" ng-click="editing = true; setLabelStr(p.pod.metadata.labels);">{{p.pod.metadata.labels}}</span>
 
                     <form ng-show="editing" ng-submit="editing = false;updateLabel(labelStr, p.pod.metadata.name);">
-                        <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"  ng-required></textarea>
+                        <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"
+                                  ng-required></textarea>
                         <br/>
                         <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
                         <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
