--- a/views/k8s/rc.html
+++ b/views/k8s/rc.html
@@ -14,6 +14,11 @@
    limitations under the License.
 -->
 <section>
+    <div class="row" style="text-align: right" ng-click="alert('Create RC')">
+        <i class="btn btn-success fa fa-plus"> New </i>
+    </div>
+    <hr/>
+
     <div class="row">
         <div class="col-sm-2"><b>Name</b></div>
         <div class="col-sm-2"><b>Namespace</b></div>
