--- a/views/k8s/services.html
+++ b/views/k8s/services.html
@@ -14,6 +14,10 @@
    limitations under the License.
 -->
 <section>
+    <div class="row" style="text-align: right" ng-click="alert('Create Service')">
+        <i class="btn btn-success fa fa-plus"> New </i>
+    </div>
+    <hr/>
         <div class="row">
                 <div class="col-sm-3"><b>Name</b></div>
                 <div class="col-sm-3"><b>Namespace</b></div>
