CreatePod and Update Pod

--- a/views/k8s/rc.html
+++ b/views/k8s/rc.html
@@ -41,10 +41,10 @@
                 </div>
 
                 <div class="col-sm-2" ng-show=true>
-                    <a ng-click="start(r.metadata.name);showrc=!showrc" class="" title="start"> <i
+                    <a ng-click="start(r.metadata.name);showrc=!showrc" class="btn btn-info" title="start"> <i
                             class="fa fa-play"></i></a>
-                    <a ng-click="stop(r.metadata.name);showrc=!showrc" class="" title="stop"> <i class="fa fa-stop"></i></a>
-                    <a ng-click="delete(r.metadata.name);showrc=!showrc" class="" title="delete"> <i
+                    <a ng-click="stop(r.metadata.name);showrc=!showrc" class="btn btn-info" title="stop"> <i class="fa fa-stop"></i></a>
+                    <a ng-click="delete(r.metadata.name);showrc=!showrc" class="btn btn-warning" title="delete"> <i
                             class="fa fa-trash"></i></a>
                 </div>
                 <div class="col-sm-12" ng-show="showrc">
