--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -14,40 +14,66 @@
    limitations under the License.
 -->
 <section>
-    <div class="row" style="text-align: right" ng-click="alert('Create Pod')">
+    <div class="row" style="text-align: right" ng-click="newPod=!newPod">
         <i class="btn btn-success fa fa-plus"> New </i>
     </div>
+
+    <div class="row">
+        <div class="col-sm-12" ng-if="newPod">
+            <form ng-submit="createPod(npStr);">
+                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid"
+                         ></textarea>
+                <br/>
+                <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
+
+            </form>
+        </div>
+    </div>
+
     <hr/>
 
     <div class="table table-responsive">
-        <thead><b>Name</b></thead>
-        <thead><b>Namespace</b></div>
-        <thead><b>Status</b></div>
-        <thead><b>Actions</b></div>
+        <div class="col-sm-3"><b>Name</b></div>
+        <div class="col-sm-3"><b>Namespace</b>
+        </div>
+        <div class="col-sm-3"><b>Status</b></div>
+        <div class="col-sm-3"><b>Actions</b></div>
     </div>
+    <hr/>
     <div class="row" ng-if="podsReady">
         <div ng-repeat="p in pods">
             <div ng-class="{gray: hover}" ng-mouseenter="hover=true" ng-mouseleave="hover=false"
                  class="row">
-                <div class="col-sm-3" ng-click="showpod=!showpod" ng-show=true>{{p.pod.metadata.name}}</div>
+                <div class="col-sm-3" ng-click="showpod=!showpod; editPod(p.id, p.pod);" ng-show=true>
+                    {{p.pod.metadata.name}}
+                </div>
                 <div class="col-sm-3" ng-show=true>{{p.pod.metadata.namespace}}</div>
                 <div class="col-sm-3" ng-show=true>{{p.pod.status.phase}}</div>
                 <div class="col-sm-3" ng-show=true>
-                    <a ng-click="editPressed=!editPressed;editPod(p.id, p.pod);" class="" title="Edit"> <i
+                    <a ng-click="editPressed=!editPressed;editPod(p.id, p.pod);" class="btn btn-info" title="Edit"> <i
                             class="fa fa-edit"></i></a>
-                    <a ng-click="start(p.pod.metadata.name);" class="" title="start"> <i
-                            class="fa fa-play"></i></a>
-                    <a ng-click="stop(p.pod.metadata.name);" class="" title="stop"> <i
-                            class="fa fa-stop"></i></a>
-                    <a ng-click="delete(p.pod.metadata.name);" class="" title="delete"> <i
-                            class="fa fa-trash"></i></a></div>
-
-                <div class="col-sm-12" ng-show="showpod">
-                    <pre>{{p.pod | json}}</pre>
+                    <!--<a ng-click="start(p.pod.metadata.name);" class="" title="start"> <i-->
+                    <!--class="fa fa-play"></i></a>-->
+                    <!--<a ng-click="stop(p.pod.metadata.name);" class="" title="stop"> <i-->
+                    <!--class="fa fa-stop"></i></a>-->
+                    <a ng-click="delete(p.pod.metadata.name);" class="btn btn-warning" title="delete"> <i
+                            class="fa fa-trash"></i></a>
                 </div>
-                <div ng-show="pod_{{p.id}} && pStr">
-                    <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid"></textarea>
-                    <!--<json child="p" default-collapsed="true" type="object"></json>-->
+            </div>
+            <div class="row">
+                <div class="col-sm-12" ng-if="(showpod || editPressed) && pStr">
+                    <form ng-show="{{p.id}} && pStr"
+                          ng-submit="updatePod(p.id, pStr, p.pod.metadata.name);">
+                        <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid"
+                                  ng-disabled="!editPressed"></textarea>
+                        <span ng-show="editPressed">
+                        <br/>
+                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                        <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
+                            </span>
+                        <!--<json child="p" default-collapsed="true" type="object"></json>-->
+                    </form>
                 </div>
             </div>
             <div class="row" ng-show=true>
@@ -65,6 +91,7 @@
                     </form>
                 </div>
             </div>
+            <hr/>
         </div>
     </div>
     </div>
