createService  and updateService - completed.

--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -32,11 +32,9 @@
     </div>
 
     <hr/>
-
-    <div class="table table-responsive">
+    <div class="row">
         <div class="col-sm-3"><b>Name</b></div>
-        <div class="col-sm-3"><b>Namespace</b>
-        </div>
+        <div class="col-sm-3"><b>Namespace</b></div>
         <div class="col-sm-3"><b>Status</b></div>
         <div class="col-sm-3"><b>Actions</b></div>
     </div>
