--- a/views/k8s/services.html
+++ b/views/k8s/services.html
@@ -14,44 +14,80 @@
    limitations under the License.
 -->
 <section>
-    <div class="row" style="text-align: right" ng-click="alert('Create Service')">
+    <div class="row" style="text-align: right" ng-click="newService=!newService">
         <i class="btn btn-success fa fa-plus"> New </i>
     </div>
-    <hr/>
-        <div class="row">
-                <div class="col-sm-3"><b>Name</b></div>
-                <div class="col-sm-3"><b>Namespace</b></div>
-                <div class="col-sm-3"><b>ClusterIP</b></div>
-                <div class="col-sm-3"><b>Actions</b></div>
+
+    <div class="row">
+        <div class="col-sm-12" ng-if="newService">
+            <form ng-submit="createService(npStr);">
+                <textarea id="jsonTextarea1" ng-model="npStr" class="ng-pristine ng-valid"
+                        ></textarea>
+                <br/>
+                <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
+
+            </form>
         </div>
-        <div class="row">
-			<div ng-repeat="s in services">
-	                <div ng-class="{gray: hover}" ng-mouseenter="hover=true" ng-mouseleave="hover=false" ng-click="showservices=!showservices" class="row">
-                        	<div class="col-sm-3" ng-show=true>{{s.metadata.name}}</div>
-                        	<div class="col-sm-3" ng-show=true>{{s.metadata.namespace}}</div>
-                        <div class="col-sm-3" ng-show=true>{{s.spec.clusterIP}}</div>
-							<div class="col-sm-3" ng-show=true>
-								<a ng-click="start(s.metadata.name);showservices=!showservices" class="btn btn-info" title="start"> <i class="fa fa-play"></i></a>
-								<a ng-click="stop(s.metadata.name);showservices=!showservices" class="btn btn-info" title="stop"> <i class="fa fa-stop"></i></a>
-                    			<a ng-click="delete(s.metadata.name);showservices=!showservices" class="btn btn-warning" title="delete"> <i class="fa fa-trash"></i></a>
-                    		</div>
-                            <div class="col-sm-12" ng-show="showservices">
-                            	<pre>{{s | json}}</pre>
-                            </div>
-                    </div>
-                <div class="row" ng-show=true>
-                    <div class="col-sm-3" ng-show=true>labels</div>
-                    <div class="col-sm-9" ng-show=true>
-                        <span ng-hide="editingLabel" ng-click="editingLabel = true; setLabelStr(s.metadata.labels);">{{s.metadata.labels}}</span>
+    </div>
 
-                        <form ng-show="editingLabel" ng-submit="editingLabel = false;updateLabel(labelStr, s.metadata.name);">
-                            <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"  ng-required></textarea>
-                            <br/>
-                            <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
-                            <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>     </form>
-                    </div>
+    <hr/>
+    <div class="row">
+        <div class="col-sm-3"><b>Name</b></div>
+        <div class="col-sm-3"><b>Namespace</b></div>
+        <div class="col-sm-3"><b>ClusterIP</b></div>
+        <div class="col-sm-3"><b>Actions</b></div>
+    </div>
+    <hr/>
+    <div class="row" ng-if="servicesReady">
+        <div ng-repeat="s in services">
+            <div ng-class="{gray: hover}" ng-mouseenter="hover=true" ng-mouseleave="hover=false"
+                  class="row">
+                <div class="col-sm-3" ng-click="showservice=!showservice;editService(s.id, s.service);">{{s.service.metadata.name}}</div>
+                <div class="col-sm-3" ng-show=true>{{s.service.metadata.namespace}}</div>
+                <div class="col-sm-3" ng-show=true>{{s.service.spec.clusterIP}}</div>
+                <div class="col-sm-3" ng-show=true>
+                    <a ng-click="editPressed=!editPressed;editService(s.id, s.service);" class="btn btn-info"
+                       title="Edit"> <i
+                            class="fa fa-edit"></i></a>
+                    <!--<a ng-click="start(s.metadata.name);showservices=!showservices" class="btn btn-info" title="start"> <i class="fa fa-play"></i></a>-->
+                    <!--<a ng-click="stop(s.metadata.name);showservices=!showservices" class="btn btn-info" title="stop"> <i class="fa fa-stop"></i></a>-->
+                    <a ng-click="delete(s.service.metadata.name);showservice=!showservice" class="btn btn-warning"
+                       title="delete"> <i class="fa fa-trash"></i></a>
                 </div>
-        	</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12" ng-if="(showservice || editPressed) && pStr">
+                    <form ng-show="{{s.id}} && pStr"
+                          ng-submit="updateService(s.id, pStr, s.service.metadata.name);">
+                        <textarea id="jsonTextarea" ng-model="pStr" class="ng-pristine ng-valid"
+                                  ng-disabled="!editPressed"></textarea>
+                        <span ng-show="editPressed">
+                        <br/>
+                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                        <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
+                            </span>
+                        <!--<json child="p" default-collapsed="true" type="object"></json>-->
+                    </form>
+                </div>
+            </div>
+            <div class="row" ng-show=true>
+                <div class="col-sm-3" ng-show=true></div>
+                <div class="col-sm-3" ng-show=true>labels</div>
+                <div class="col-sm-6" ng-show=true>
+                    <span ng-hide="editing" ng-click="editing = true; setLabelStr(s.service.metadata.labels);">{{s.service.metadata.labels}}</span>
 
-		</div>
+                    <form ng-show="editing" ng-submit="editing = false;updateLabel(labelStr, s.service.metadata.name);">
+                        <textarea id="jsonLabelArea" ng-model="labelStr" class="ng-pristine ng-valid"
+                                  ng-required></textarea>
+                        <br/>
+                        <button class="btn-small" type="cancel"><i class="glyphicon glyphicon-remove"> </i></button>
+                        <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
+                    </form>
+                </div>
+            </div>
+            <hr/>
+        </div>
+    </div>
+    </div>
 </section>
